Fixed burger icon and projects overflow

--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,9 @@ nav{
     display: inline-block;
     cursor: pointer;
     margin-left: 16px;
-    position: absolute;
-    margin-top: 12px
+    position: fixed;
+    margin-top: 12px;
+    z-index: 100;
 }
 
 .bar1, .bar2, .bar3 {
@@ -399,6 +400,7 @@ img.group3{
     margin: 5%;
     padding: 16px;
     min-height: 160px;
+    z-index: 10;
 }
 
 .project-box h4{
@@ -408,14 +410,14 @@ img.group3{
 
 .project-box h3{
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .project-box span{
     background: #000000;
     color: #ffffff;
     padding: 8px;
-    font-size: 12px;
+    font-size: 11px;
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 2px;
@@ -424,6 +426,9 @@ img.group3{
     left: 24px;
     top: -24px;
     margin-bottom: -12px;
+    min-height: 32px;
+    min-width: 64px;
+    text-align: center;
 }
 
 .solution{
